cabal-version:       2.2
name:                lifetimes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zenhack/haskell-lifetimes
license:             Apache-2.0

license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2021 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   main
  location: https://github.com/zenhack/haskell-lifetimes

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , containers ^>=0.6.2
    , stm ^>=2.5
    , transformers ^>=0.5.6
    , zenhack-prelude ^>=0.1
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src
  exposed-modules:
      Lifetimes
    , Lifetimes.Rc
test-suite tests
  import: shared-opts
  build-depends:
      lifetimes
    , hspec ^>=2.7.6
    , safe-exceptions ^>=0.1.7
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
